[project]
name = "mycli"
dynamic = ["version"]
description = "CLI for MySQL Database. With auto-completion and syntax highlighting."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [{ name = "Mycli Core Team", email = "mycli-dev@googlegroups.com" }]
urls = { homepage = "http://mycli.net" }

dependencies = [
    "click >= 8.3.1",
    "cryptography >= 1.0.0",
    "Pygments ~= 2.19.2",
    "prompt_toolkit>=3.0.6,<4.0.0",
    "PyMySQL >= 0.9.2",
    "sqlparse>=0.3.0,<0.6.0",
    "sqlglot[rs] == 27.*",
    "configobj >= 5.0.5",
    "cli_helpers[styles] >= 2.9.0",
    "pyperclip >= 1.8.1",
    "pycryptodomex",
    "pyfzf >= 0.3.1",
    "rapidfuzz ~= 3.14.3",
]

[build-system]
requires = ["setuptools>=64.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]


[project.optional-dependencies]
ssh = [
    "paramiko~=3.5.1",
    "sshtunnel",
]
llm = [
    "llm>=0.19.0",
    "setuptools",                   # Required by llm commands to install models
    "pip",
]
all = [
  "mycli[ssh]",
  "mycli[llm]",
]
dev = [
    "behave>=1.2.6",
    "coverage>=7.2.7",
    "mypy~=1.18.1",
    "pexpect>=4.9.0",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "tox>=4.8.0",
    "pdbpp>=0.10.3",
    "paramiko~=3.5.1",
    "sshtunnel",
    "llm>=0.19.0",
    "setuptools",                   # Required by llm commands to install models
    "pip",
    "ruff~=0.14.10",
]

[project.scripts]
mycli = "mycli.main:cli"

[tool.setuptools.package-data]
mycli = ["myclirc", "AUTHORS", "SPONSORS"]

[tool.setuptools.packages.find]
include = ["mycli*"]

[tool.ruff]
target-version = 'py310'
line-length = 140

[tool.ruff.lint]
select = ['A', 'B', 'I', 'E', 'W', 'F', 'C4', 'PIE', 'TID']
ignore = [
    'B005',   # Multi-character strip()
    'E401',   # Multiple imports on one line
    'E402',   # Module level import not at top of file
    'PIE808', # range() starting with 0
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    'E111', # indentation-with-invalid-multiple
    'E114', # indentation-with-invalid-multiple-comment
    'E117', # over-indented
    'W191', # tab-indentation
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ['mycli', 'test', 'steps']

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = 'all'

[tool.ruff.format]
preview = true
quote-style = 'preserve'
exclude = ['build', 'mycli_dev']

[tool.mypy]
pretty = true
strict_equality = true
ignore_missing_imports = true
warn_unreachable = true
warn_redundant_casts = true
warn_no_return = true
warn_unused_configs = true
show_column_numbers = true
exclude = ['^build/', '^dist/']
