[project]
name = "mycli"
dynamic = ["version"]
description = "CLI for MySQL Database. With auto-completion and syntax highlighting."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [{ name = "Mycli Core Team", email = "mycli-dev@googlegroups.com" }]
urls = { homepage = "http://mycli.net" }

dependencies = [
    "click ~= 8.3.1",
    "cryptography ~= 46.0.5",
    "Pygments ~= 2.19.2",
    "prompt_toolkit>=3.0.6,<4.0.0",
    "PyMySQL ~= 1.1.2",
    "sqlparse>=0.3.0,<0.6.0",
    "sqlglot[rs] == 27.*",
    "configobj ~= 5.0.9",
    "cli_helpers[styles] ~= 2.10.1",
    "pyperclip ~= 1.11.0",
    "pycryptodomex ~= 3.23.0",
    "pyfzf ~= 0.3.1",
    "rapidfuzz ~= 3.14.3",
    "keyring ~= 25.7.0",
]

[build-system]
requires = ["setuptools>=64.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]


[project.optional-dependencies]
ssh = [
    "paramiko ~= 3.5.1",
    "sshtunnel ~= 0.4.0",
]
llm = [
    "llm ~= 0.28.0",
    "setuptools == 82.*",                   # Required by llm commands to install models
    "pip == 26.*",
]
all = [
  "mycli[ssh]",
  "mycli[llm]",
]
dev = [
    "behave ~= 1.3.3",
    "coverage ~= 7.13.4",
    "mypy ~= 1.19.1",
    "pexpect ~= 4.9.0",
    "pytest ~= 9.0.2",
    "pytest-cov ~= 7.0.0",
    "tox ~= 4.35.0",
    "pdbpp ~= 0.11.7",
    "paramiko ~= 3.5.1",
    "sshtunnel ~= 0.4.0",
    "llm ~= 0.28.0",
    "setuptools == 82.*",                   # Required by llm commands to install models
    "pip == 26.*",
    "ruff ~= 0.15.0",
]

[project.scripts]
mycli = "mycli.main:cli"

[tool.setuptools.package-data]
mycli = ["myclirc", "AUTHORS", "SPONSORS", "TIPS"]

[tool.setuptools.packages.find]
include = ["mycli*"]

[tool.ruff]
target-version = 'py310'
line-length = 140

[tool.ruff.lint]
select = ['A', 'B', 'I', 'E', 'W', 'F', 'C4', 'PIE', 'TID']
ignore = [
    'B005',   # Multi-character strip()
    'E401',   # Multiple imports on one line
    'E402',   # Module level import not at top of file
    'PIE808', # range() starting with 0
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    'E111', # indentation-with-invalid-multiple
    'E114', # indentation-with-invalid-multiple-comment
    'E117', # over-indented
    'W191', # tab-indentation
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ['mycli', 'test', 'steps']

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = 'all'

[tool.ruff.format]
preview = true
quote-style = 'preserve'
exclude = ['build', 'mycli_dev']

[tool.mypy]
pretty = true
strict_equality = true
ignore_missing_imports = true
warn_unreachable = true
warn_redundant_casts = true
warn_no_return = true
warn_unused_configs = true
show_column_numbers = true
exclude = ['^build/', '^dist/']
